fix: overflow operations list depending on showFilter ( integrate it inside the table component )

--- a/src/app/components/table_poc_3/table_poc_3.component.scss
+++ b/src/app/components/table_poc_3/table_poc_3.component.scss
@@ -4,5 +4,4 @@
 // }
 .table-container {
     width: 100%;
-    overflow-x: auto;
 }
